2007-03-28  Everaldo Canuto  <everaldo@simios.org>

	[Fixes #79149]

	* XplatUIX11.cs: Implement SystrayBalloon for X11 systems.

	* ThemeWin32Classic.cs, Theme.cs: DrawBalloonWindow and BalloonWindowRect 
	implemented, this methods is used by NotifyIcon.BalloonWindow class.

	* NotifyIcon.cs: BalloonWindow class added to support Balloon in X11 
	systems.

2007-03-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItem.cs: Forgot to make Invalidate internal.

2007-03-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Add a InvalidateSelection method to
	invalidate methods which are currently selected, and call
	it when setting FullRowSelect and HideSelection, instead of
	calling Redraw.

2007-03-28  Chris Toshok  <toshok@ximian.com>

	* XplatUIX11.cs (UnmapWindow): reindent this block.

	* DataGrid.cs (UpdateSelectionAfterCursorMove): we need to update
	the selection_start if we're moving the selection (that is, not
	extending it). Fixes bug #80461.

2007-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* ProgressBar.cs: Make the default MarqueeAnimationSpeed = 100.
	* ToolStripPanel.cs: Fix RowMargin, Renderer, RenderMode, and
	create private ControlCollection.

2007-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: We need to call OnVisibleChanged for our implicit
	children as well as our normal children.  Fixes scrollbars in
	comboboxes not showing up.

2007-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs, Form.cs: Anywhere we call CreateHandle, we need to do
	the check for IsHandleCreated first.  The check in CreateHandle is not
	good enough because CreateHandle can be overriden, and the override 
	should not be called if the handle is already created.

2007-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Remove MonoTODO for tooltips.
	* ToolStripComboBox.cs: Fix MonoTODO for DropDownHeight and events.
	* ToolStripContainer.cs: Add custom ControlCollection class.