@@ -1,5 +1,12 @@
 2007-03-28  Everaldo Canuto  <everaldo@simios.org>
 
+	* XplatUIX11.cs: Prevent system to open more than one balloon.
+
+	* NotifyIcon.cs: Prevent system to open more than one balloon and remove
+	some compiler warning messages.
+
+2007-03-28  Everaldo Canuto  <everaldo@simios.org>
+
 	[Fixes #79149]
 
 	* XplatUIX11.cs: Implement SystrayBalloon for X11 systems.
